# css-unicode-range

./: LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: publish_to_pypi.yml
Lib/cssUnicodeRange/: __init__.py  cmdline.py
