[metadata]
name = cssUnicodeRange
version = 1.0.0
description = Generate the unicode-range CSS property for a webfont file.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://www.lucasfonts.com/
author = Jens Kutilek
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Environment :: Console

[options]
zip_safe = True
package_dir=
    =Lib
packages=find:
platforms = any
install_requires =
    fonttools[woff]
python_requires = >=3.9
# setup_requires =
#     setuptools_scm

[options.packages.find]
where=Lib

[bdist_wheel]
universal = 1

[options.entry_points]
console_scripts =
    css-unicode-range = cssUnicodeRange.cmdline:css_unicode_range

[flake8]
# select = B, C, E, F, W, T4, B9
# ignore = E203, E266, E501, W503, E741, F403, F401  # last two: * imports, unused imports
max-line-length = 80
max-complexity = 19
exclude = .git, __pycache__, build, dist, .eggs, .tox
